<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity"
    android:id="@+id/LoginActivity">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/imgLogo"/>

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/hint"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/edtUsername"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:autofillHints="username"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtUserName"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="password"
        android:background="@color/hint"
        android:drawableStart="@drawable/baseline_security_24"
        android:drawablePadding="20dp"
        android:hint="@string/edtPassword"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/btnLogin"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:text="@string/txtForgot"
        android:textColor="@color/teal_700" />

    <TextView
        android:id="@+id/txtNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtForgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:text="@string/txtSign"
        android:textColor="@color/teal_700" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_500"
        android:layout_centerInParent="true"
        android:elevation="10dp"
        android:visibility="gone"
        />


</RelativeLayout>